# qqn-jax

./: .gitignore  .llmignore  README.md  build.sh  oracles.md  pyproject.toml  run_reports.js  run_reports.sh  spline_search.md
.github/workflows/: python-publish.yml
docs/: algorithm.md  conclusions.md  novelty.md  results.md  results.update.op.md
docs/dev/: code.review.op.md  notes.md
docs/theory/: spline_demo.html  spline_search.md
examples/: basic_usage.py  fashion_mnist_mlp_comparison.md  fashion_mnist_mlp_comparison.py  mnist_comparison.py  mnist_sparse_benchmark.py  optimizer_profiles.py
qqn_jax/: __init__.py  lbfgs.md  lbfgs.py  line_search.py  oracles.md  oracles.py  profiling.md  regions.md  regions.py  regularizers.py  solver.py  spline_search.md  spline_search.py  types.md  types.py  utils.md  utils.py
qqn_jax/docs/: line_search.md  solver.md
results/: fashion_mnist_mlp_comparison_20260622_144249.analysis.md  fashion_mnist_mlp_comparison_20260622_145738.analysis.md  fashion_mnist_mlp_comparison_20260622_175843.analysis.md  fashion_mnist_mlp_comparison_fashion_default_20260623_093402.analysis.md
tests/: test_lbfgs.py  test_line_search.py  test_solver.py  test_spline_search.py  test_utils.py
